src/test/deca/context/invalid/provided/variable_non_declaree.deca
// Description:
//    Utilisation d'une variable non déclarée.
//
// Resultats:
//    variable_non_declaree.deca:12:3: Identifier 'x' is not defined
//
// Historique:
//    cree le 11/01/2025

{
   // Doit etre refuse.
   x = 10;
}
